Revision history for MooseX-Types-Structured

0.18   17 August 2009
        - Changed the Makefile.PL to reduce dependencies not needed by users
          that are not authors.  Bumped the revision and released to clear an
          error with cpan permissions.

0.17   12 August 2009
        - No new functionality.
        - Changed the way we specify dependencies in the Makefile.PL to reduce
          the depth of the dependency chain in cases where we don't need to be
          running the author quality tests.
        - Some documentation tweaks.

0.16    28 May 2009
        - Fix failing tests and test warnings on MooseX::Types 0.11.

0.15    27 May 2009
        - Change copy on license and added contributors section

0.14    01 May 2009
        - Use a builder instead of wrapping new to set the default structured
          coercion (rafl).
        - Make overflow (slurpy) type constraints introspectable and the name
          of constraints using them reasonable (rafl).

0.13    25 April 2009
        - Explicitly don't inline yet another constructor to avoid
          warnings (autarch).

0.12    21 April 2009
        - Explicitly don't inline the constructor to avoid warnings (rafl).
        - Pathological test cases for API methods equals, is_a_type_of and
          is_subtype_of (rafl).
        - significant improvements to API methods is_a_type_of, is_subtype_of
          and equals (nothingmuch).

0.11    06 April 2009
        - Fixed braindead bug in the way I override ->validate, which caused
          valiate to never correctly pass a constraint.

0.10    02 April 2009
        - Minor documentation grammar fixes and one major example error fixed
        - Much improved error reporting.  Now we return the 'internal' error
          that kicked a validation failure.  It's still best to use this for
          debugging rather than for actual user error messages, since I think
          we are rapidly approaching a need for Moose constraints needing more