@@ -10,7 +10,7 @@ license 'perl';
 ## Module dependencies
 requires 'Moose' => '0.63';
 requires 'MooseX::Types' => '0.08';
-requires 'Devel::PartialDump' => '0.07';
+requires 'Devel::PartialDump' => '0.10';
 requires 'Sub::Exporter' => '0.982';
 
 ## Testing dependencies
